Add in Mojangs launcher default JVM arguments they use